fix(live controls): select input dropdown menu overflow (#10164)

--- a/scopes/compositions/compositions/ui/compositions-panel/live-control-panel.module.scss
+++ b/scopes/compositions/compositions/ui/compositions-panel/live-control-panel.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   font-size: 12px;
   padding: 8px 0;
+  width: 100%;
 }
 
 .item {
